# PPOIS_NEW

./: .gitignore
Lab_2/Cookery/: Cookery.sln  README.md
Lab_2/Cookery/Cookery/: Category.cpp  Category.h  ConsoleCategoryPrinter.cpp  ConsoleCategoryPrinter.h  ConsoleCookPrinter.cpp  ConsoleCookPrinter.h  ConsoleCustomerPrinter.cpp  ConsoleCustomerPrinter.h  ConsoleDeliveryPrinter.cpp  ConsoleDeliveryPrinter.h  ConsoleDishPrinter.cpp  ConsoleDishPrinter.h  ConsoleFridgePrinter.cpp  ConsoleFridgePrinter.h  ConsoleIngredientPrinter.cpp  ConsoleIngredientPrinter.h  ConsoleKitchenPrinter.cpp  ConsoleKitchenPrinter.h  ConsoleMenuPrinter.cpp  ConsoleMenuPrinter.h  ConsoleOrderPrinter.cpp  ConsoleOrderPrinter.h  ConsoleOvenPrinter.cpp  ConsoleOvenPrinter.h  ConsolePanPrinter.h  ConsolePaymentPrinter.cpp  ConsolePaymentPrinter.h  ConsolePranPrinter.cpp  ConsolePrinterStep.cpp  ConsolePrinterStep.h  ConsolePrinterTemperatureSensor.cpp  ConsolePrinterTemperatureSensor.h  ConsoleRecipePrinter.h  ConsoleTimerPrinter.cpp  ConsoleTimerPrinter.h  ConsoleToolPrinter.h  ConsoleToolPrintercpp.cpp  ConsolerecipePrinter.cpp  Cook.cpp  Cook.h  (+100 more)
Lab_2/Cookery/CookeryTests/: CategoryTests.cpp  CookTests.cpp  CookeryTests.vcxproj  CookeryTests.vcxproj.filters  CustomerTests.cpp  DeliveryTests.cpp  DishTests.cpp  FridgeTests.cpp  IngredientTests.cpp  InventoryTests.cpp  KitchenTests.cpp  MenuTests.cpp  OrderTests.cpp  OvenTests.cpp  PanTests.cpp  PaymentTests.cpp  RecipeTests.cpp  ReservationTests.cpp  ReviewTests.cpp  StepTests.cpp  TemperatureSensorTests.cpp  TimerTests.cpp
Lab_3/: CMakeLists.txt  FitnessTracker.sln  README.md
Lab_3/Fitness/: Appointment.cpp  Appointment.h  AppointmentManager.cpp  AppointmentManager.h  BodyMetrics.cpp  BodyMetrics.h  BodyMetricsManager.cpp  BodyMetricsManager.h  CMakeLists.txt  Challenge.cpp  Challenge.h  DailyPlan.cpp  DailyPlan.h  DailyPlanManager.cpp  DailyPlanManager.h  Equipment.cpp  Equipment.h  Exception.cpp  Exception.h  Fitness.vcxproj  Fitness.vcxproj.filters  FitnessTracker.cpp  FitnessTracker.h  FitnessTrackerService.cpp  FitnessTrackerService.h  FoodPrinter.cpp  FoodPrinter.h  FoodProduct.cpp  FoodProduct.h  FoodProductManager.cpp  FoodProductManager.h  Goal.cpp  Goal.h  GoalManager.cpp  GoalManager.h  HealthReport.cpp  HealthReport.h  HealthReportManager.cpp  HealthReportManager.h  IFitnessTracker.h  (+72 more)
Lab_3/FitnessTests/: AppointmentTests.cpp  BodyMetricsTests.cpp  CMakeLists.txt  ChallengeTests.cpp  DailyPlanTests.cpp  EquipmentTests.cpp  FitnessTests.vcxproj  FitnessTrackerTests.cpp  FoodProductTests.cpp  GoalTests.cpp  HealthReportTests.cpp  MealRecordTests.cpp  MedicationTests.cpp  MembershipTests.cpp  MoodRecordTests.cpp  SleepRecordTests.cpp  TrainerTests.cpp  UserTests.cpp  WaterIntakeTests.cpp  coverage.xml
TagGame/: Doxyfile  TagGame.sln
TagGame/GameTest/: GameTest.cpp  GameTest.vcxproj  test.cpp
TagGame/Tag/: Header.h  Tag.h  Tag.vcxproj  Tag.vcxproj.filters  UI.cpp  UI.h  main.cpp  tag.cpp
TagGame/docs1/html/: _header_8h.html  (+28 more)
VectorMain/: Doxyfile  VectorMain.sln
VectorMain/VectorMain/: Header.h  UI.cpp  UI.h  Vector.h  VectorMain.cpp  VectorMain.vcxproj  VectorMain.vcxproj.filters  main.cpp
VectorMain/VectorTest/: VectorTest.cpp  VectorTest.vcxproj  test.cpp
lab_4/BubbleSort/: BubbleSort.sln  CMakeLists.txt
lab_4/BubbleSort/BubbleSort/: BubbleSort.h  BubbleSort.vcxproj  BubbleSort.vcxproj.filters  CMakeLists.txt  Employee.cpp  Employee.h
lab_4/BubbleSort/BubbleSortTests/: BubbleSortTests.vcxproj  CMakeLists.txt  coverage.xml  test.cpp
lab_4/Graph/: CMakeLists.txt  Graph.sln
lab_4/Graph/Graph/: AdjacentVertexIterator.h  CMakeLists.txt  ConstAdjancentVertexIterator.h  ConstEdgeIterator.h  ConstIncidenceIterator.h  EdgeIterator.h  Graph.h  Graph.vcxproj  Graph.vcxproj.filters  IncidenceIterator.h  VertexIterator.h
lab_4/Graph/GraphTests/: CMakeLists.txt  GraphTests.vcxproj  coverage.xml  test.cpp
lab_4/PatientSort/: CMakeLists.txt  PatientSort.sln
lab_4/PatientSort/PatientSortTests/: CMakeLists.txt  PatientSortTests.vcxproj  coverage.xml  test.cpp
(+65 files in other folders)
